--- a/app/views/bookings/dashboard.html.erb
+++ b/app/views/bookings/dashboard.html.erb
@@ -3,7 +3,9 @@
   <div class="dashboard-header d-flex justify-content-between">
 
     <div class="logo-box">
+      <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "logo.png", :class => "dashboard-style-logo", :id => "sidebar" %>
+      <% end %>
     </div>
 
       <div class="dashboard-search-bar">
@@ -17,18 +19,22 @@
           </div>
         </form>
       </div>
-
-      <div class="dropdown dashboard-home">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Payment Info</a>
-          <a class="dropdown-item" href="#">Account Setting</a>
-          <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
-            <i class="fas fa-sign-out-alt"></i>
+      <div class="items-menu-bar d-flex align-items-center">
+          <%= link_to root_path do %>
+            <i class="fas fa-home fa-2x"></i>
           <% end %>
-        </div>
+          <div class="dropdown dashboard-home">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Payment Info</a>
+              <a class="dropdown-item" href="#">Account Setting</a>
+              <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
+                <i class="fas fa-sign-out-alt"></i>
+              <% end %>
+            </div>
+          </div>
       </div>
   </div>
 
