--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,39 @@
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon navbar-dark bg-dark">
+  <%= link_to root_path, class: "navbar-brand" do %>
+    <%= image_tag "logo.png", :class => "style-logo" %>
+    <% end %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <% if user_signed_in? %>
+         <div class="items-menu-bar d-flex align-items-center">
+          <%= link_to dashboard_path do %>
+            <i class="fas fa-home fa-2x"></i>
+          <% end %>
+          <div class="dropdown dashboard-home">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Payment Info</a>
+              <a class="dropdown-item" href="#">Account Setting</a>
+              <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
+                <i class="fas fa-sign-out-alt"></i>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
 <div class="request-booking">
   <div class = "request-to-book"><h1> Request to book</h1></div>
 
